	legend
	+ Added remote services link button
	+ Added support for `additionalParameters` to `EBox.TabMenu` JS
	prototype
	+ Added `configKeysFromFile` to `EBox::Config`
	+ Bugfix: make boolean setter honour editable attribute
	+ Change tableBody to fetch each row instead of all rows at the same time
	+ Place pager on the bottom-right corner of the table
0.12.101
	+ Bugfix: Remove bogus mason tags
	+ Bugfix: Use 'window' as variable instead of 'Window' since it is
	more portable
0.12.100
	+ Remove bogus div end tag
	+ Fix items list for titles with single quotes
	+ Fix: precondition fail message is not showed when it does not exist
0.12.99
	+ Add new table view without actions
	+ Add javascript library to generate report charts
	+ Fixing redirect URL coming from proxy
	+ Added Chinese from Taiwan and Galician translations
0.12.2
	+ Bugfix: Fix an issue with javascript and the union type that prevented
	things like samba share UI from working ok
0.12.1
	+ Bugfix: Get logger from EBox category if it is not set explicity
	to allow external programs to log using eBox log helper functions
0.12
	+ Added .field_help class in public.css
	+ Add field help to modelView.mas
	+ Stripe tables in hang table
	+ Use again the loading gif when switching tabs
	+ Add completedAjaxRequest and startAjaxRequest to be used as helpers
	  for automated testing with ANSTE
	+ Fix port validation with "<=" 65535
	+ Display 24 as default value in `IPNetwork` default setter
	+ Comment out some debug
	+ Bugfix. Create redirection URLs using client headers and guessing checking
	  the protocol (HTTP or HTTPS)
	+ Add spinner gif to modalbox window
	+ Make EBox::Config::configKeyFromFile non-greedy to parse values properly
	+ IPNetwork control has a default mas kvalue of 24
0.11.102
	+ Added `override_user_modification` configuration parameter to
	avoid user modification checkings and override them without asking
	+ Use the new EBox::Model::Row api
0.11.101