@@ -10,6 +10,7 @@
 	+ Bugfix: make boolean setter honour editable attribute
 	+ Change tableBody to fetch each row instead of all rows at the same time
 	+ Place pager on the bottom-right corner of the table
+	+ Bugfix: hide trailing text when there's a change on a union select
 0.12.101
 	+ Bugfix: Remove bogus mason tags
 	+ Bugfix: Use 'window' as variable instead of 'Window' since it is
